--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/ibm-plex-mono": "^4.5.9",
+    "@fontsource/ibm-plex-sans": "^4.5.10",
+    "lodash": "^4.17.21",
+    "modern-normalize": "^1.1.0",
     "next": "12.1.6",
+    "prettier": "^2.6.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.52.1",
+    "tachyons": "^4.12.0"
   },
   "devDependencies": {
     "eslint": "8.16.0",
