--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/ibm-plex-mono": "^4.5.9",
     "@fontsource/ibm-plex-sans": "^4.5.10",
     "card-validator": "^8.1.1",
+    "clsx": "^1.1.1",
     "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
     "next": "12.1.6",
